--- a/web/components/SocialMedias/SocialMedias.module.scss
+++ b/web/components/SocialMedias/SocialMedias.module.scss
@@ -27,9 +27,8 @@
     gap: 45px;
   }
 
-  .socialMedias a {
+  .socialMedias a img {
     height: 35px;
     width: 35px;
-    filter: drop-shadow(0px 0px 4px #07aae2);
   }
 }
