--- a/web/styles/Stats.module.scss
+++ b/web/styles/Stats.module.scss
@@ -937,7 +937,7 @@
   }
 
   .teamList {
-    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .leaderboardHeader {
